--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -10,9 +10,9 @@
 
   </div>
   <div class="controles">
-    <button mat-raised-button color="primary">
+    <a mat-raised-button color="primary" href="#/student/datos-personales">
       Datos Personales
-    </button>
+    </a>
     <a mat-raised-button color="secundary" href="#/student/medicalHistory" >
       Historial Medico
     </a>
