--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,57 +1,105 @@
-<div class="container">
-  <div class="usuario">
-    <img src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
-    <div class="info">
-      <p class="nombre">Nombre: Juan Diego Molina</p>
-      <p class="user">Usuario: juandiegost</p>
-      <p class="suscripcion">Suscripción actual: Guardapex</p>
-      <p class="estado">Estado de suscripción: <span class="porTerminar">vence el 24 de enero del 2019</span></p>
+
+
+<!--Section: Testimonials v.1-->
+<section class="section pb-3 text-center">
+
+  <!--Section heading-->
+  <h1 class="section-heading h1 pt-4">Perfil</h1>
+  <!--Section description-->
+  
+
+  <div class="row">
+
+   
+
+    <!--Grid column-->
+    <div class="col-lg-12 col-md-12 mb-4">
+
+      <!--Card-->
+      <div class="text-center">
+        <div class="card testimonial-card">
+  
+          <!--Background color-->
+          <div class="card-up blue lighten-2">
+          </div>
+  
+          <!--Avatar-->
+          <div class="avatar mx-auto white"><img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(20).jpg"
+              alt="avatar mx-auto white" class="rounded-circle img-fluid">
+          </div>
+  
+          <div class="card-body">
+            <!--Name-->
+            <h4 class="card-title mt-1">Anna Aston <p class="user">(juandiegost)</p></h4>
+            <hr>
+            <!--Quotation-->
+            <p><i class="fa fa-quote-left"></i> Neque cupiditate assumenda in maiores repudiandae mollitia
+              architecto.</p>
+              <p class="suscripcion">Suscripción actual: Guardapex</p>
+              <p class="estado">Estado de suscripción: <span class="porTerminar">vence el 24 de enero del 2019</span></p>
+
+               <!--Facebook-->
+               <a type="button" mdbBtn floating="true" size="sm" class="btn-fb waves-light" mdbWavesEffect><i class="fa fa-facebook-f"></i></a>
+
+                <!--Twitter-->
+                <a type="button" mdbBtn floating="true" size="lg" class="btn-tw waves-light" mdbWavesEffect><i class="fa fa-twitter"></i></a>
+
+                <button type="button" class="btn btn-info btn-rounded btn-md" (click)="openDialogEditUser()">editar<i class="fa fa-user " aria-hidden="true"></i></button>
+                <a class="btn aqua-gradient  btn-md" href="#/student/medicalHistory" >
+                  Historial Medico<i class="fa fa-heartbeat"></i>
+                </a>
+                <!-- <button type="button" class="btn btn-outline-default btn-rounded waves-effect"><i class="fa fa-gem mr-2"
+                    aria-hidden="true"></i>Button</button> -->
+          </div>
+            <hr>
+            <div class="historial-pagos">
+              <h3>Historial de Suscripciones</h3>
+              <div class="suscripciones">
+                <mat-accordion class="example-headers-align">
+                  <mat-expansion-panel>
+                    <mat-expansion-panel-header>
+                      <mat-panel-title>
+                        Guardapex
+                      </mat-panel-title>
+                      <mat-panel-description>
+                        24 de enero de 2019
+                      </mat-panel-description>
+                    </mat-expansion-panel-header>
+                    <p class="fechaRegistro">Fecha Inicio: 25 de diciembre de 2018</p>
+                    <p class="fechaVencimiento">Fecha Final: 25 de enero de 2019</p>
+                    <p class="Costo">$ 500.000</p>
+                  </mat-expansion-panel>
+                  <mat-expansion-panel (opened)="panelOpenState = true" (closed)="panelOpenState = false">
+                    <mat-expansion-panel-header>
+                      <mat-panel-title>
+                        Entrenamiento General
+                      </mat-panel-title>
+                      <mat-panel-description>
+                        24 de enero de 2019
+                      </mat-panel-description>
+                    </mat-expansion-panel-header>
+                    <p class="fechaRegistro">Fecha Inicio: 20 de nobiembre de 2019</p>
+                    <p class="fechaVencimiento">Fecha Final: 05 de diciembre de 2018</p>
+                    <p class="sesiones">Sesiones compradas: 5</p>
+                    <p class="Costo">$ 50.000</p>
+                  </mat-expansion-panel>
+                </mat-accordion>
+            
+            
+              </div>
+            </div>
+  
+        </div>
+      </div>
+      <!--Card-->
+
     </div>
-
-  </div>
-  <div class="controles">
-    <a mat-raised-button color="primary" href="#/student/datos-personales">
-      Datos Personales
-    </a>
-    <a mat-raised-button color="secundary" href="#/student/medicalHistory" >
-      Historial Medico
-    </a>
-  </div>
-</div>
-
-<div class="historial-pagos">
-  <h3>Historial de Suscripciones</h3>
-  <div class="suscripciones">
-    <mat-accordion class="example-headers-align">
-      <mat-expansion-panel>
-        <mat-expansion-panel-header>
-          <mat-panel-title>
-            Guardapex
-          </mat-panel-title>
-          <mat-panel-description>
-            24 de enero de 2019
-          </mat-panel-description>
-        </mat-expansion-panel-header>
-        <p class="fechaRegistro">Fecha Inicio: 25 de diciembre de 2018</p>
-        <p class="fechaVencimiento">Fecha Final: 25 de enero de 2019</p>
-        <p class="Costo">$ 500.000</p>
-      </mat-expansion-panel>
-      <mat-expansion-panel (opened)="panelOpenState = true" (closed)="panelOpenState = false">
-        <mat-expansion-panel-header>
-          <mat-panel-title>
-            Entrenamiento General
-          </mat-panel-title>
-          <mat-panel-description>
-            24 de enero de 2019
-          </mat-panel-description>
-        </mat-expansion-panel-header>
-        <p class="fechaRegistro">Fecha Inicio: 20 de nobiembre de 2019</p>
-        <p class="fechaVencimiento">Fecha Final: 05 de diciembre de 2018</p>
-        <p class="sesiones">Sesiones compradas: 5</p>
-        <p class="Costo">$ 50.000</p>
-      </mat-expansion-panel>
-    </mat-accordion>
+    <!--Grid column-->
 
 
   </div>
-</div>
+
+</section>
+<!--Section: Testimonials v.1-->
+
+
