--- a/src/app/dialogs/login/dialog-login.component.html
+++ b/src/app/dialogs/login/dialog-login.component.html
@@ -9,5 +9,5 @@
     <input matInput placeholder="Constraseña" id="password" required>
   </mat-form-field>
   <br>
-  <button id="button-login" mat-flat-button (click)="loginUser($event)">Ingresar</button>
+  <button id="button-login" mat-flat-button (click)="loginUser($event)" mat-dialog-close>Ingresar</button>
 </form>
