--- a/src/app/profile/profile.component.css
+++ b/src/app/profile/profile.component.css
@@ -43,6 +43,12 @@
 .porTerminar {
   color: orange;
 }
+.lejosdevencer{
+  color: green;
+}
+.vencido{
+  color: red;
+}
 
 .historial-pagos{
   width: 100%;
