--- a/src/app/student-progress/student-progress.component.html
+++ b/src/app/student-progress/student-progress.component.html
@@ -31,7 +31,7 @@
                 [labels]="chartLabels"
                 [colors]="chartColors"
                 [options]="chartOptions"
-                [legend]="true"
+                [legend]="false"
                 (chartHover)="chartHovered($event)"
                 (chartClick)="chartClicked($event)">
             </canvas>
@@ -41,20 +41,20 @@
 
   </mdb-card>
   <!--/.Card-->
-  
- 
+
+
       <!--Card-->
   <mdb-card cascade="true" wider="true">
-      
+
     <div class="view view-cascade gradient-card-header peach-gradient">
         <h2 class="card-header-title mb-2">Title of the news</h2>
         <p class="">
             <i class="fa fa-calendar"></i> 26.07.2017</p>
-            
+
         </div>
-        
+
     <mdb-card-body cascade="true" class="text-center">
-        
+
             <div style="display: block">
                     <canvas mdbChart
                     [chartType]="chartType"
@@ -62,38 +62,38 @@
                     [labels]="chartLabels"
                     [colors]="chartColors"
                     [options]="chartOptions"
-                    [legend]="true"
+                    [legend]="false"
                     (chartHover)="chartHovered($event)"
                     (chartClick)="chartClicked($event)">
                 </canvas>
             </div>
-        
+
         <a href="#" class="orange-text mt-1 d-flex flex-row-reverse">
             <h5 class="waves-effect p-2" mdbWavesEffect>Read more
                 <i class="fas fa-chevron-right"></i>
             </h5>
         </a>
-        
+
     </mdb-card-body>
     <!--/.Card content-->
-    
+
 </mdb-card>
 <!--/.Card-->
 
 
     <!--Card-->
     <mdb-card cascade="true">
-        
+
         <!--Card image-->
         <div class="view view-cascade gradient-card-header blue-gradient">
             <h2 class="card-header-title">Marta</h2>
             <p>Deserve for her own card</p>
         </div>
         <!--/Card image-->
-        
+
         <mdb-card-body cascade="true" class="text-center">
             <!--Card content-->
-            
+
             <mdb-card-text>
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus, ex, recusandae. Facere modi
                 sunt, quod
@@ -103,7 +103,7 @@
                 minima
                 veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam.
             </mdb-card-text>
-            
+
             <!--Twitter-->
             <a class="icons-sm tw-ic">
                 <i class="fab fa-twitter px-2"> </i>
@@ -123,7 +123,7 @@
 
         </mdb-card-body>
     <!--/.Card content-->
-    
+
 </mdb-card>
   <!--/.Card-->
 
@@ -134,7 +134,7 @@
 <div class="card-deck">
         <!--Card-->
         <mdb-card cascade="true" narrower="true">
-      
+
           <div class="view view-cascade  gradient-card-header purple-gradient">
             <h2 class="card-header-title">Mattonit</h2>
             <p>The Boar</p>
@@ -153,7 +153,7 @@
               </a>
             </div>
           </div>
-      
+
           <mdb-card-body cascade="true" class="text-center">
             <!--Card content-->
             <div style="display: block">
@@ -163,30 +163,30 @@
                       [labels]="chartLabels"
                       [colors]="chartColors"
                       [options]="chartOptions"
-                      [legend]="true"
+                      [legend]="false"
                       (chartHover)="chartHovered($event)"
                       (chartClick)="chartClicked($event)">
                   </canvas>
                 </div>
           </mdb-card-body>
           <!--/.Card content-->
-      
+
         </mdb-card>
         <!--/.Card-->
-        
-       
+
+
             <!--Card-->
         <mdb-card cascade="true" wider="true">
-            
+
           <div class="view view-cascade gradient-card-header peach-gradient">
               <h2 class="card-header-title mb-2">Title of the news</h2>
               <p class="">
                   <i class="fa fa-calendar"></i> 26.07.2017</p>
-                  
+
               </div>
-              
+
           <mdb-card-body cascade="true" class="text-center">
-              
+
                   <div style="display: block">
                           <canvas mdbChart
                           [chartType]="chartType"
@@ -194,38 +194,38 @@
                           [labels]="chartLabels"
                           [colors]="chartColors"
                           [options]="chartOptions"
-                          [legend]="true"
+                          [legend]="false"
                           (chartHover)="chartHovered($event)"
                           (chartClick)="chartClicked($event)">
                       </canvas>
                   </div>
-              
+
               <a href="#" class="orange-text mt-1 d-flex flex-row-reverse">
                   <h5 class="waves-effect p-2" mdbWavesEffect>Read more
                       <i class="fas fa-chevron-right"></i>
                   </h5>
               </a>
-              
+
           </mdb-card-body>
           <!--/.Card content-->
-          
+
       </mdb-card>
       <!--/.Card-->
-      
-      
+
+
           <!--Card-->
           <mdb-card cascade="true">
-              
+
               <!--Card image-->
               <div class="view view-cascade gradient-card-header blue-gradient">
                   <h2 class="card-header-title">Marta</h2>
                   <p>Deserve for her own card</p>
               </div>
               <!--/Card image-->
-              
+
               <mdb-card-body cascade="true" class="text-center">
                   <!--Card content-->
-                  
+
                   <mdb-card-text>
                       Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus, ex, recusandae. Facere modi
                       sunt, quod
@@ -235,7 +235,7 @@
                       minima
                       veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam.
                   </mdb-card-text>
-                  
+
                   <!--Twitter-->
                   <a class="icons-sm tw-ic">
                       <i class="fab fa-twitter px-2"> </i>
@@ -252,12 +252,12 @@
                   <a class="icons-sm email-ic">
                       <i class="fas fa-envelope px-2"> </i>
                   </a>
-      
+
               </mdb-card-body>
           <!--/.Card content-->
-          
+
       </mdb-card>
         <!--/.Card-->
-      
-      
+
+
       </div>
