--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,16 +1,14 @@
-
-
 <!--Section: Testimonials v.1-->
 <section class="section pb-3 text-center">
 
   <!--Section heading-->
   <h1 class="section-heading h1 pt-4">Perfil</h1>
   <!--Section description-->
-  
+
 
   <div class="row">
 
-   
+
 
     <!--Grid column-->
     <div class="col-lg-12 col-md-12 mb-4">
@@ -18,77 +16,72 @@
       <!--Card-->
       <div class="text-center">
         <div class="card testimonial-card">
-  
+
           <!--Background color-->
           <div class="card-up blue lighten-2">
           </div>
-  
+
           <!--Avatar-->
-          <div class="avatar mx-auto white"><img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(20).jpg"
-              alt="avatar mx-auto white" class="rounded-circle img-fluid">
+          <div class="avatar mx-auto white"><img src="{{urlImagenUsuario}}" alt="avatar mx-auto white" class="rounded-circle img-fluid">
           </div>
-  
+
           <div class="card-body">
             <!--Name-->
-            <h4 class="card-title mt-1">Anna Aston <p class="user">(juandiegost)</p></h4>
+            <h4 class="card-title mt-1">{{nombreAlumno}}<p class="user">({{usuarioAlumno}})</p>
+            </h4>
             <hr>
-            <!--Quotation-->
+            <!--Quotation
             <p><i class="fa fa-quote-left"></i> Neque cupiditate assumenda in maiores repudiandae mollitia
-              architecto.</p>
-              <p class="suscripcion">Suscripción actual: Guardapex</p>
-              <p class="estado">Estado de suscripción: <span class="porTerminar">vence el 24 de enero del 2019</span></p>
+              architecto.</p>-->
+            <p *ngIf="diasdif <= 0 " class="suscripcion">Ultima Suscripción: {{ultimaSuscripcion.servicio.nombreServicio}}</p>
+            <p *ngIf="diasdif > 0 " class="suscripcion">Suscripción actual: {{ultimaSuscripcion.servicio.nombreServicio}}</p>
 
-               <!--Facebook-->
-               <a type="button" mdbBtn floating="true" size="sm" class="btn-fb waves-light" mdbWavesEffect><i class="fa fa-facebook-f"></i></a>
+            <p class="estado">Estado de suscripción:
+              <span *ngIf="diasdif > 0 && diasdif < 8" class="porTerminar">Termina el {{replaceAt(ultimaSuscripcion.fechaFin,10," ") | date:'mediumDate'}}</span>
+              <span *ngIf="diasdif > 8" class="lejosdevencer">Termina el {{replaceAt(ultimaSuscripcion.fechaFin,10," ") | date:'mediumDate'}}</span>
+              <span *ngIf="diasdif <= 0 " class="vencido">Termino el {{replaceAt(ultimaSuscripcion.fechaFin,10," ") | date:'mediumDate'}}</span>
+            </p>
 
-                <!--Twitter-->
-                <a type="button" mdbBtn floating="true" size="lg" class="btn-tw waves-light" mdbWavesEffect><i class="fa fa-twitter"></i></a>
+            <!--Facebook-->
+            <a type="button" mdbBtn floating="true" size="sm" class="btn-fb waves-light" mdbWavesEffect><i class="fa fa-facebook-f"></i></a>
 
-                <button type="button" class="btn btn-info btn-rounded btn-md" (click)="openDialogEditUser()">editar<i class="fa fa-user " aria-hidden="true"></i></button>
-                <a class="btn aqua-gradient  btn-md" href="#/student/medicalHistory" >
-                  Historial Medico<i class="fa fa-heartbeat"></i>
-                </a>
-                <!-- <button type="button" class="btn btn-outline-default btn-rounded waves-effect"><i class="fa fa-gem mr-2"
+            <!--Twitter-->
+            <a type="button" mdbBtn floating="true" size="lg" class="btn-tw waves-light" mdbWavesEffect><i class="fa fa-twitter"></i></a>
+
+            <button type="button" class="btn btn-info btn-rounded btn-md" (click)="openDialogEditUser()">editar<i class="fa fa-user "
+                aria-hidden="true"></i></button>
+            <a class="btn aqua-gradient  btn-md" href="#/student/medicalHistory">
+              Historial Medico<i class="fa fa-heartbeat"></i>
+            </a>
+            <!-- <button type="button" class="btn btn-outline-default btn-rounded waves-effect"><i class="fa fa-gem mr-2"
                     aria-hidden="true"></i>Button</button> -->
           </div>
-            <hr>
-            <div class="historial-pagos">
-              <h3>Historial de Suscripciones</h3>
-              <div class="suscripciones">
+          <hr>
+          <div class="historial-pagos">
+            <h3>Historial de Suscripciones</h3>
+            <div class="suscripciones">
+              <div *ngFor="let suscripcion of historialSuscripciones">
                 <mat-accordion class="example-headers-align">
                   <mat-expansion-panel>
                     <mat-expansion-panel-header>
                       <mat-panel-title>
-                        Guardapex
+                        {{suscripcion.servicio.nombreServicio}}
                       </mat-panel-title>
                       <mat-panel-description>
-                        24 de enero de 2019
+                        {{replaceAt(suscripcion.fechaFin,10," ") | date:'mediumDate' }}
                       </mat-panel-description>
                     </mat-expansion-panel-header>
-                    <p class="fechaRegistro">Fecha Inicio: 25 de diciembre de 2018</p>
-                    <p class="fechaVencimiento">Fecha Final: 25 de enero de 2019</p>
-                    <p class="Costo">$ 500.000</p>
-                  </mat-expansion-panel>
-                  <mat-expansion-panel (opened)="panelOpenState = true" (closed)="panelOpenState = false">
-                    <mat-expansion-panel-header>
-                      <mat-panel-title>
-                        Entrenamiento General
-                      </mat-panel-title>
-                      <mat-panel-description>
-                        24 de enero de 2019
-                      </mat-panel-description>
-                    </mat-expansion-panel-header>
-                    <p class="fechaRegistro">Fecha Inicio: 20 de nobiembre de 2019</p>
-                    <p class="fechaVencimiento">Fecha Final: 05 de diciembre de 2018</p>
-                    <p class="sesiones">Sesiones compradas: 5</p>
-                    <p class="Costo">$ 50.000</p>
+                    <p class="fechaRegistro">Fecha Inicio: {{replaceAt(suscripcion.fechaInicio,10," ") | date:'mediumDate' }}</p>
+                    <p class="fechaVencimiento">Fecha Final: {{replaceAt(suscripcion.fechaFin,10," ") | date:'mediumDate' }}</p>
+                    <p class="Costo">Total Pagado: {{suscripcion.precioSuscripcion | currency }}</p>
                   </mat-expansion-panel>
                 </mat-accordion>
-            
-            
+
               </div>
+
             </div>
-  
+          </div>
+
         </div>
       </div>
       <!--Card-->
@@ -101,5 +94,3 @@
 
 </section>
 <!--Section: Testimonials v.1-->
-
-
