--- a/src/app/dialogs/edit-user/dialog-edit-user.component.css
+++ b/src/app/dialogs/edit-user/dialog-edit-user.component.css
@@ -8,7 +8,7 @@
     top: 20px;
     position: relative;
     margin: 0%;
-    margin-top: 5px; 
+    margin-top: 5px;
 }
 #btnPerson {
     display:none;
@@ -17,4 +17,8 @@
 #btnUser {
     display:none;
     visibility: hidden;
+}
+
+.img-perfil{
+  width: 50%;
 }
