--- a/src/app/dialogs/edit-user/dialog-edit-user.component.html
+++ b/src/app/dialogs/edit-user/dialog-edit-user.component.html
@@ -25,18 +25,23 @@
         mdbInputDirective>
       <label data-error="wrong" data-success="right" for="orangeForm-pass">Your password</label>
     </div>
+    <div id="btnUser" class="modal-footer d-flex justify-content-center">
+      <button mdbBtn color="deep-orange" class="waves-light" mdbWavesEffect>Sign up</button>
+    </div>
   </div>
 
-  <div id="btnUser" class="modal-footer d-flex justify-content-center">
-    <button mdbBtn color="deep-orange" class="waves-light" mdbWavesEffect>Sign up</button>
-  </div>
 
 
   <div id="Personal" class="modal-body mx-3">
-    <div class="md-form mb-5">
-      <input type="file" id="orangeForm-img" (change)="onFileSelectedListener($event)">
-
-      <label data-error="wrong" data-success="right" for="orangeForm-name">Foto</label>
+    <div class="avatar mx-auto white">
+      <img src="" [src]="urlImg" alt="avatar mx-auto white" class="img-perfil rounded-circle mx-auto d-block">
+      <div id="progress-element" style="display: none" class="progress">
+        <div class="progress-bar" role="progressbar" [ngStyle]="{'width': progress +'%'}" aria-valuenow="{{progress}}"
+          aria-valuemin="0" aria-valuemax="100"></div>
+      </div>
+      <div class="md-form mb-5">
+        <input type="file" id="orangeForm-img" (change)="onFileSelectedListener($event)">
+      </div>
     </div>
 
     <div class="md-form mb-5">
