--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -14,7 +14,7 @@
     <div class="col-lg-12 col-md-12 mb-4">
 
 
-      
+
 
       <!--Card-->
       <div class="text-center">
@@ -25,7 +25,7 @@
           </div>
 
           <!--Avatar-->
-          <div class="avatar mx-auto white"><img src="{{urlImagenUsuario}}" alt="avatar mx-auto white" class="rounded-circle img-fluid">
+          <div class="avatar mx-auto white"><img src="{{urlImagenUsuario}}" alt="avatar mx-auto white" class="img-perfil rounded-circle img-fluid">
           </div>
 
           <div class="card-body">
