--- a/src/app/student-root/student-root.component.html
+++ b/src/app/student-root/student-root.component.html
@@ -24,7 +24,7 @@
     </button>
   </mat-menu>
 
-  <button id="button-exit" mat-flat-button routerLink="{{getRouterLogin()}}" (click)="printOfBlack($event.currentTarget)">Salir</button>
+  <button id="button-exit" mat-flat-button routerLink="{{getRouterLogin()}}" (click)="printOfBlackOut($event.currentTarget)">Salir</button>
 
 </mat-toolbar>
 
