--- a/src/app/student-schedule/student-schedule.component.html
+++ b/src/app/student-schedule/student-schedule.component.html
@@ -1,6 +1,9 @@
 
 <mdb-progress-bar class="progress primary-color-dark" mode="indeterminate"></mdb-progress-bar>
 
+
+
+
 <mdb-card cascade="false" narrower="true">
         <!--Card image-->
         <div class="view view-cascade gradient-card-header blue-gradient narrower py-2 mx-4 mb-3 d-flex justify-content-between align-items-center">
@@ -15,6 +18,16 @@
           </div>
       
           <a href="" class="white-text mx-3">Table name</a>
+          <div class="month">      
+              <ul>
+                <li class="prev">&#10094;</li>
+                <li class="next">&#10095;</li>
+                <li>
+                  August<br>
+                  <span style="font-size:18px">2017</span>
+                </li>
+              </ul>
+            </div>
       
           <div>
             <button type="button" mdbBtn color="white" outline="true" rounded="true" size="sm" class="px-2" mdbWavesEffect>
