--- a/src/app/student-progress/student-progress.component.html
+++ b/src/app/student-progress/student-progress.component.html
@@ -1,263 +1,75 @@
-
-<div class="card-deck">
-  <!--Card-->
-  <mdb-card cascade="true" narrower="true">
-
-    <div class="view view-cascade  gradient-card-header purple-gradient">
-      <h2 class="card-header-title">Mattonit</h2>
-      <p>The Boar</p>
-      <div class="text-center">
-        <!--Facebook-->
-        <a type="button" class="btn-floating btn-small waves-light" mdbWavesEffect>
-          <i class="fa fa-facebook-f"></i>
-        </a>
-        <!--Twitter-->
-        <a type="button" class="btn-floating btn-small waves-light" mdbWavesEffect>
-          <i class="fa fa-twitter"></i>
-        </a>
-        <!--Google +-->
-        <a type="button" class="btn-floating btn-small waves-light" mdbWavesEffect>
-          <i class="fa fa-google-plus"></i>
-        </a>
-      </div>
-    </div>
-
-    <mdb-card-body cascade="true" class="text-center">
-      <!--Card content-->
-      <div style="display: block">
-            <canvas mdbChart
-                [chartType]="chartType"
-                [datasets]="chartDatasets"
-                [labels]="chartLabels"
-                [colors]="chartColors"
-                [options]="chartOptions"
-                [legend]="false"
-                (chartHover)="chartHovered($event)"
-                (chartClick)="chartClicked($event)">
-            </canvas>
-          </div>
-    </mdb-card-body>
-    <!--/.Card content-->
-
-  </mdb-card>
-  <!--/.Card-->
-
-
-      <!--Card-->
-  <mdb-card cascade="true" wider="true">
-
-    <div class="view view-cascade gradient-card-header peach-gradient">
-        <h2 class="card-header-title mb-2">Title of the news</h2>
-        <p class="">
-            <i class="fa fa-calendar"></i> 26.07.2017</p>
-
-        </div>
-
-    <mdb-card-body cascade="true" class="text-center">
-
-            <div style="display: block">
-                    <canvas mdbChart
-                    [chartType]="chartType"
-                    [datasets]="chartDatasets"
-                    [labels]="chartLabels"
-                    [colors]="chartColors"
-                    [options]="chartOptions"
-                    [legend]="false"
-                    (chartHover)="chartHovered($event)"
-                    (chartClick)="chartClicked($event)">
-                </canvas>
-            </div>
-
-        <a href="#" class="orange-text mt-1 d-flex flex-row-reverse">
-            <h5 class="waves-effect p-2" mdbWavesEffect>Read more
-                <i class="fas fa-chevron-right"></i>
-            </h5>
-        </a>
-
-    </mdb-card-body>
-    <!--/.Card content-->
-
-</mdb-card>
-<!--/.Card-->
-
-
+<div *ngIf="!loading">
+  <div class="card-deck">
     <!--Card-->
-    <mdb-card cascade="true">
 
-        <!--Card image-->
-        <div class="view view-cascade gradient-card-header blue-gradient">
-            <h2 class="card-header-title">Marta</h2>
-            <p>Deserve for her own card</p>
+    <mdb-card cascade="true" narrower="true">
+
+      <div class="view view-cascade  gradient-card-header purple-gradient">
+        <h2 class="card-header-title">Masa Corporal</h2>
+        <p>Progresos</p>
+        <div class="text-center">
+          <!--Facebook-->
+          <a type="button" class="btn-floating btn-small waves-light" mdbWavesEffect>
+            <i class="fa fa-facebook-f"></i>
+          </a>
+          <!--Twitter-->
+          <a type="button" class="btn-floating btn-small waves-light" mdbWavesEffect>
+            <i class="fa fa-twitter"></i>
+          </a>
+          <!--Google +-->
+          <a type="button" class="btn-floating btn-small waves-light" mdbWavesEffect>
+            <i class="fa fa-google-plus"></i>
+          </a>
         </div>
-        <!--/Card image-->
-
-        <mdb-card-body cascade="true" class="text-center">
-            <!--Card content-->
-
-            <mdb-card-text>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus, ex, recusandae. Facere modi
-                sunt, quod
-                quibusdam
-                dignissimos neque rem nihil ratione est placeat vel, natus non quos laudantium veritatis sequi.Ut enim
-                ad
-                minima
-                veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam.
-            </mdb-card-text>
-
-            <!--Twitter-->
-            <a class="icons-sm tw-ic">
-                <i class="fab fa-twitter px-2"> </i>
-            </a>
-            <!--Linkedin-->
-            <a class="icons-sm li-ic">
-                <i class="fab fa-linkedin-in px-2"> </i>
-            </a>
-            <!--Facebook-->
-            <a class="icons-sm fb-ic">
-                <i class="fab fa-facebook-f px-2"> </i>
-            </a>
-            <!--Email-->
-            <a class="icons-sm email-ic">
-                <i class="fas fa-envelope px-2"> </i>
-            </a>
-
-        </mdb-card-body>
-    <!--/.Card content-->
-
-</mdb-card>
-  <!--/.Card-->
-
-
-</div>
-
-<hr>
-<div class="card-deck">
-        <!--Card-->
-        <mdb-card cascade="true" narrower="true">
-
-          <div class="view view-cascade  gradient-card-header purple-gradient">
-            <h2 class="card-header-title">Mattonit</h2>
-            <p>The Boar</p>
-            <div class="text-center">
-              <!--Facebook-->
-              <a type="button" class="btn-floating btn-small waves-light" mdbWavesEffect>
-                <i class="fa fa-facebook-f"></i>
-              </a>
-              <!--Twitter-->
-              <a type="button" class="btn-floating btn-small waves-light" mdbWavesEffect>
-                <i class="fa fa-twitter"></i>
-              </a>
-              <!--Google +-->
-              <a type="button" class="btn-floating btn-small waves-light" mdbWavesEffect>
-                <i class="fa fa-google-plus"></i>
-              </a>
-            </div>
-          </div>
-
-          <mdb-card-body cascade="true" class="text-center">
-            <!--Card content-->
-            <div style="display: block">
-                  <canvas mdbChart
-                      [chartType]="chartType"
-                      [datasets]="chartDatasets"
-                      [labels]="chartLabels"
-                      [colors]="chartColors"
-                      [options]="chartOptions"
-                      [legend]="false"
-                      (chartHover)="chartHovered($event)"
-                      (chartClick)="chartClicked($event)">
-                  </canvas>
-                </div>
-          </mdb-card-body>
-          <!--/.Card content-->
-
-        </mdb-card>
-        <!--/.Card-->
-
-
-            <!--Card-->
-        <mdb-card cascade="true" wider="true">
-
-          <div class="view view-cascade gradient-card-header peach-gradient">
-              <h2 class="card-header-title mb-2">Title of the news</h2>
-              <p class="">
-                  <i class="fa fa-calendar"></i> 26.07.2017</p>
-
-              </div>
-
-          <mdb-card-body cascade="true" class="text-center">
-
-                  <div style="display: block">
-                          <canvas mdbChart
-                          [chartType]="chartType"
-                          [datasets]="chartDatasets"
-                          [labels]="chartLabels"
-                          [colors]="chartColors"
-                          [options]="chartOptions"
-                          [legend]="false"
-                          (chartHover)="chartHovered($event)"
-                          (chartClick)="chartClicked($event)">
-                      </canvas>
-                  </div>
-
-              <a href="#" class="orange-text mt-1 d-flex flex-row-reverse">
-                  <h5 class="waves-effect p-2" mdbWavesEffect>Read more
-                      <i class="fas fa-chevron-right"></i>
-                  </h5>
-              </a>
-
-          </mdb-card-body>
-          <!--/.Card content-->
-
-      </mdb-card>
-      <!--/.Card-->
-
-
-          <!--Card-->
-          <mdb-card cascade="true">
-
-              <!--Card image-->
-              <div class="view view-cascade gradient-card-header blue-gradient">
-                  <h2 class="card-header-title">Marta</h2>
-                  <p>Deserve for her own card</p>
-              </div>
-              <!--/Card image-->
-
-              <mdb-card-body cascade="true" class="text-center">
-                  <!--Card content-->
-
-                  <mdb-card-text>
-                      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus, ex, recusandae. Facere modi
-                      sunt, quod
-                      quibusdam
-                      dignissimos neque rem nihil ratione est placeat vel, natus non quos laudantium veritatis sequi.Ut enim
-                      ad
-                      minima
-                      veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam.
-                  </mdb-card-text>
-
-                  <!--Twitter-->
-                  <a class="icons-sm tw-ic">
-                      <i class="fab fa-twitter px-2"> </i>
-                  </a>
-                  <!--Linkedin-->
-                  <a class="icons-sm li-ic">
-                      <i class="fab fa-linkedin-in px-2"> </i>
-                  </a>
-                  <!--Facebook-->
-                  <a class="icons-sm fb-ic">
-                      <i class="fab fa-facebook-f px-2"> </i>
-                  </a>
-                  <!--Email-->
-                  <a class="icons-sm email-ic">
-                      <i class="fas fa-envelope px-2"> </i>
-                  </a>
-
-              </mdb-card-body>
-          <!--/.Card content-->
-
-      </mdb-card>
-        <!--/.Card-->
-
-
       </div>
+
+      <mdb-card-body cascade="true" class="text-center">
+        <!--Card content-->
+        <div style="display: block">
+          <canvas mdbChart [chartType]="chartType" [datasets]="chartDatasetsMasaCorporal" [colors]="chartColors"
+            [options]="chartOptions" [legend]="false" (chartHover)="chartHovered($event)" (chartClick)="chartClicked($event)">
+          </canvas>
+        </div>
+      </mdb-card-body>
+      <!--/.Card content-->
+
+    </mdb-card>
+    <!--/.Card-->
+
+    <mdb-card cascade="true" narrower="true">
+
+      <div class="view view-cascade  gradient-card-header purple-gradient">
+        <h2 class="card-header-title">Grasa Corporal</h2>
+        <p>Progresos</p>
+        <div class="text-center">
+          <!--Facebook-->
+          <a type="button" class="btn-floating btn-small waves-light" mdbWavesEffect>
+            <i class="fa fa-facebook-f"></i>
+          </a>
+          <!--Twitter-->
+          <a type="button" class="btn-floating btn-small waves-light" mdbWavesEffect>
+            <i class="fa fa-twitter"></i>
+          </a>
+          <!--Google +-->
+          <a type="button" class="btn-floating btn-small waves-light" mdbWavesEffect>
+            <i class="fa fa-google-plus"></i>
+          </a>
+        </div>
+      </div>
+
+      <mdb-card-body cascade="true" class="text-center">
+        <!--Card content-->
+        <div style="display: block">
+          <canvas mdbChart [chartType]="chartType" [datasets]="chartDatasetsGrasaCorporal" [labels]="chartLabelsFechas"
+            [colors]="chartColors" [options]="chartOptions" [legend]="false" (chartHover)="chartHovered($event)"
+            (chartClick)="chartClicked($event)">
+          </canvas>
+        </div>
+      </mdb-card-body>
+      <!--/.Card content-->
+
+
+    </mdb-card>
+
+  </div>
+</div>
